--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ h1  {
 }
 
 .camisaCeFl {
-    min-width: 290px;
+    width: 80%;
 }
 
 .segundoMain {
@@ -177,7 +177,7 @@ h1  {
     justify-content: center;
     align-items: center;
     width: 100px;
-    height: 20px;
+    height: auto;
     border-radius: 15px;
     background-color: #990000;
     margin-bottom: 10px;
