--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ h1  {
 }
 
 .camisaCeFl {
-    width: auto;
+    min-width: 400px;
 
 }
 
@@ -177,6 +177,7 @@ h1  {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     min-width: 100px;
     width: 100px;
     max-height: 50px;
