--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,14 @@ a {
     text-decoration: none;
     color: white;
     font-weight: bolder;
+    transition: ease 0.3s;
+}
+
+a:hover {
+    color: #ff8888; 
+}
+.inicioLink {
+    color: #FF0000;
 }
 
 main {
@@ -249,7 +257,7 @@ h1  {
     justify-content: center;
     align-items: center;
     height: auto;
-    min-height: 720px;
+    min-height: 850px;
     padding-top: 15px;
     background-color: #E9E9E9;
 }
